http.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
        - name: http
          image: golisivaprasad/local:pure
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  type: ClusterIP
  selector:
    app: http
  ports:
    - name: http
      port: 80          # Service port (client-facing)
      targetPort: 3000  # Container port
